# geni-icfp25-ae

./: Cargo.toml  Dockerfile  LICENSE  README.md  flake.nix  profiling.sh
.github/workflows/: main.yml
bench/ICFP/: README.md  run.sh
bench/examples/: adder1.gl  adder2.gl  adder4.gl  cancer.bif.dice.gl
nix/: bngen-dice-gennifer.nix  bngen.nix  c-memo.nix  clad.nix  dice.nix  genfer.nix  gennifer-gcc.nix  gennifer.nix  plot-csv.nix  plot.nix  problog.nix  profiling.nix
src/: derivative.rs  free_variable_analysis.rs  generating_function.rs  genfun_conversion.rs  id_manager.rs  lang.rs  lib.rs  live_variable_analysis.rs  main.rs  numbers.rs  semantics.rs  simplify.rs  transformers.rs
src/backend/: c.rs  interpreter.rs  mod.rs  ocaml.rs
src/ir/: lang.rs  mod.rs  parser.rs  type_checker.rs
tests/: integration_test.rs  test_BernoulliVar_0.gir  test_Binomial.gir  test_Geometric.gir  test_Poisson.gir  test_Poisson_var.gir  test_adder.gl  test_adder_2.gl  test_adder_3.gl  test_adder_id.gl  test_and.gir  test_arithmetic_1.gir  test_arithmetic_2.gir  test_b_dead_twice.gir  test_bern_0.gir  test_bern_1.gir  test_bern_3.gir  test_biased.gir  test_bool_as_expr.gir  test_boolean_op_and.gir  test_boolean_op_or.gir  test_c.sh  test_cache_reals.gir  test_collider_sum.gir  test_copy_tuple_00.gir  test_copy_tuple_000.gir  test_copy_tuple_2.gir  test_copy_tuple_4.gir  test_if.gir  test_live_1.gir  test_live_2.gir  test_loop_sum_0.gir  test_loop_sum_1.gir  test_lva_0.gir  test_nested_if.gir  test_nested_let.gir  test_not.gir  test_observe.gir  test_observe_0.gir  test_ocaml.sh  (+10 more)
(+95 files in other folders)
