[package]
name = "gennifer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
clap = { version = "4.5.27", features = ["derive"] }
num-traits = "0.2.16"
bitvec = "1"
rustc-hash = "=2.1.1"
im = "15.1.0"
glob = "0.3"
itertools = "0.14.0"
hashbrown = "0.15.2"
ordered_hash_map = "0.4.0"
genfer = { git = "https://nix:gldt-LcpiWj2MgHrHXjgNSWsF@git.uwaterloo.ca/jianlin.li/genfer.git", rev = "1b7309b97e278ad09752de4317b2c7cca9b937fe" }
log = "0.4.27"
stderrlog = "0.6.0"
